@@ -73,6 +73,8 @@ void MediaSettings::reset() {
     deblock_filter = false;
 	dering_filter = false;
 	gradfun_filter = false;
+	blur_filter = false;
+	sharpen_filter = false;
 	noise_filter = false;
 	postprocessing_filter = pref->initial_postprocessing;
 	upscaling_filter = false;
@@ -211,6 +213,8 @@ void MediaSettings::list() {
 	qDebug("  deblock_filter: %d", deblock_filter);
 	qDebug("  dering_filter: %d", dering_filter);
 	qDebug("  gradfun_filter: %d", gradfun_filter);
+	qDebug("  blur_filter: %d", blur_filter);
+	qDebug("  sharpen_filter: %d", sharpen_filter);
 	qDebug("  noise_filter: %d", noise_filter);
 	qDebug("  postprocessing_filter: %d", postprocessing_filter);
 	qDebug("  upscaling_filter: %d", upscaling_filter);
@@ -308,6 +312,8 @@ void MediaSettings::save(QSettings * set) {
 	set->setValue( "deblock_filter", deblock_filter);
 	set->setValue( "dering_filter", dering_filter);
 	set->setValue( "gradfun_filter", gradfun_filter);
+	set->setValue( "blur_filter", blur_filter);
+	set->setValue( "sharpen_filter", sharpen_filter);
 	set->setValue( "noise_filter", noise_filter);
 	set->setValue( "postprocessing_filter", postprocessing_filter);
 	set->setValue( "upscaling_filter", upscaling_filter);
@@ -406,6 +412,8 @@ void MediaSettings::load(QSettings * set) {
 	deblock_filter = set->value( "deblock_filter", deblock_filter).toBool();
 	dering_filter = set->value( "dering_filter", dering_filter).toBool();
 	gradfun_filter = set->value( "gradfun_filter", gradfun_filter).toBool();
+	blur_filter = set->value( "blur_filter", blur_filter).toBool();
+	sharpen_filter = set->value( "sharpen_filter", sharpen_filter).toBool();
 	noise_filter = set->value( "noise_filter", noise_filter).toBool();
 	postprocessing_filter = set->value( "postprocessing_filter", postprocessing_filter).toBool();
 	upscaling_filter = set->value( "upscaling_filter", upscaling_filter).toBool();
