@@ -104,6 +104,8 @@ public:
 	bool deblock_filter;
 	bool dering_filter;
 	bool gradfun_filter;
+	bool blur_filter;
+	bool sharpen_filter;
 	bool noise_filter;
 	bool postprocessing_filter;
 	bool upscaling_filter; //!< Software scaling
